@@ -422,6 +422,7 @@ Various bugfixes, small features, and a few experimental things:
 * Copy IRC-over-UDP update option from REL1_4
 * (bug 2548) Keep summary on 'show changes' of section edit
 * Move center on toc to title part to avoid breaking .toc style usage
+* HTML sanitizer: correct multiple attributes by keeping last, not first
 
 
 === Caveats ===
